[package]
name = "cdrs-tokio"
version = "2.0.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>", "Kamil Rojewski <kamil.rojewski@gmail.com>"]
edition = "2018"

description = "Async Cassandra DB driver written in Rust"
documentation = "https://docs.rs/cdrs-tokio"
homepage = "https://github.com/krojew/cdrs-tokio"
repository = "https://github.com/krojew/cdrs-tokio"
readme = "./README.md"
keywords = ["cassandra", "driver", "client", "cassandradb", "async"]
license = "MIT/Apache-2.0"

[features]
default = ["v4"]
rust-tls = ["rustls", "tokio-rustls", "webpki"]
v3 = []
v4 = []
# enable v5 feature when it's actually implemented
# v5 = []
e2e-tests = []
# enables dynamic cluster adjustments basing on status
# changes server events
unstable-dynamic-cluster = []

[dependencies]
async-trait = "0.1.24"
byteorder = "1"
chrono = "0.4"
fnv = "1.0"
log = "0.4.1"
lz4-compress = "=0.1.0"
bb8 = "0.7"
rand = "0.8"
snap = "1.0"
time = "0.2.16"
tokio = { version = "1.0", features = ["net", "io-util", "rt", "sync", "macros", "rt-multi-thread"] }
tokio-rustls = { version = "0.22", optional = true }
uuid = "0.8.1"
webpki = { version = "0.21", optional = true }

[dependencies.rustls]
version = "0.19"
optional = true
default-features = false

[dev-dependencies]
env_logger = "0.8"
maplit = "1.0.0"
regex = "1.4"
cdrs-tokio-helpers-derive = "1.1"

[[example]]
name = "dynamic_cluster"
required-features = ["unstable-dynamic-cluster"]
