[workspace]
members = [
    "cassandra-protocol",
    "cdrs-tokio",
    "cdrs-tokio-helpers-derive"
]

[workspace.dependencies]
arc-swap = "1.7.1"
uuid = "1.16.0"
derivative = "2.2.0"
derive_more = { version = "2.0.0", features = ["constructor", "display"] }
itertools = "0.14.0"
thiserror = "2.0.0"
