[package]
name = "cassandra-protocol"
version = "1.0.0-beta.2"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>", "Kamil Rojewski <kamil.rojewski@gmail.com>"]
edition = "2018"
description = "Cassandra protocol implementation"
documentation = "https://docs.rs/cassandra-protocol"
homepage = "https://github.com/krojew/cdrs-tokio"
repository = "https://github.com/krojew/cdrs-tokio"
keywords = ["cassandra", "client", "cassandradb"]
license = "MIT/Apache-2.0"

[features]
e2e-tests = []

[dependencies]
arrayref = "0.3"
bitflags = "1.3"
chrono = "0.4"
derive_more = "0.99"
float_eq = "0.7"
itertools = "0.10"
num = "0.4"
lz4_flex = "0.9"
snap = "1"
thiserror = "1"
time = { version = "0.3", features = ["std", "macros"] }
uuid = "0.8"
derivative = "2.2.0"
