[package]
name = "cassandra-protocol"
version = "2.0.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>", "Kamil Rojewski <kamil.rojewski@gmail.com>"]
edition = "2018"
description = "Cassandra protocol implementation"
documentation = "https://docs.rs/cassandra-protocol"
homepage = "https://github.com/krojew/cdrs-tokio"
repository = "https://github.com/krojew/cdrs-tokio"
keywords = ["cassandra", "client", "cassandradb"]
license = "MIT/Apache-2.0"

[features]
e2e-tests = []

[dependencies]
arc-swap = "1.5.0"
arrayref = "0.3.6"
bitflags = "1.3.2"
chrono = { version = "0.4.20", default_features = false, features = ["std"] }
crc32fast = "1.3.2"
derivative = "2.2.0"
derive_more = "0.99.17"
float_eq = "1.0.0"
integer-encoding = "3.0.3"
itertools = "0.10.3"
num = "0.4.0"
lz4_flex = "0.9.3"
snap = "1.0.5"
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["std", "macros"] }
uuid = "1.0.0"
