[package]
name = "cassandra-protocol"
version = "3.1.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>", "Kamil Rojewski <kamil.rojewski@gmail.com>"]
edition = "2018"
description = "Cassandra protocol implementation"
documentation = "https://docs.rs/cassandra-protocol"
homepage = "https://github.com/krojew/cdrs-tokio"
repository = "https://github.com/krojew/cdrs-tokio"
keywords = ["cassandra", "client", "cassandradb"]
license = "MIT/Apache-2.0"
categories = ["asynchronous", "database"]

[features]
e2e-tests = []

[dependencies]
arc-swap.workspace = true
arrayref = "0.3.7"
bitflags = "2.4.0"
chrono = { version = "0.4.31", default_features = false, features = ["std"] }
crc32fast = "1.3.2"
derivative.workspace = true
derive_more.workspace = true
float_eq = "1.0.1"
integer-encoding = "4.0.0"
itertools.workspace = true
num = "0.4.1"
lz4_flex = "0.11.1"
snap = "1.1.0"
thiserror.workspace = true
time = { version = "0.3.29", features = ["std", "macros"] }
uuid.workspace = true
bytes.workspace = true
