[package]
name = "cdrs-tokio-helpers-derive"
version = "5.0.1"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>", "Kamil Rojewski <kamil.rojewski@gmail.com>"]
description = "Derive CDRS helper traits"
license = "MIT/Apache-2.0"
repository = "https://github.com/krojew/cdrs-tokio"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.5"
proc-macro2 = "1.0.52"
syn = "2.0.2"
quote = "1.0.26"
