[package]
name = "cdrs-tokio-helpers-derive"
version = "5.0.2"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>", "Kamil Rojewski <kamil.rojewski@gmail.com>"]
description = "Derive CDRS helper traits"
license = "MIT/Apache-2.0"
repository = "https://github.com/krojew/cdrs-tokio"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
itertools = "0.11.0"
proc-macro2 = "1.0.52"
syn = "2.0.2"
quote = "1.0.26"
