[package]
name = "cdrs-tokio"
version = "8.1.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>", "Kamil Rojewski <kamil.rojewski@gmail.com>"]
edition = "2018"
description = "Async Cassandra DB driver written in Rust"
documentation = "https://docs.rs/cdrs-tokio"
homepage = "https://github.com/krojew/cdrs-tokio"
repository = "https://github.com/krojew/cdrs-tokio"
readme = "../README.md"
keywords = ["cassandra", "driver", "client", "cassandradb", "async"]
license = "MIT/Apache-2.0"
categories = ["asynchronous", "database"]

[features]
rust-tls = ["tokio-rustls", "webpki"]
e2e-tests = []
derive = ["cdrs-tokio-helpers-derive"]
http-proxy = ["async-http-proxy"]

[dependencies]
arc-swap.workspace = true
atomic = "0.5.1"
bytes.workspace = true
cassandra-protocol = { path = "../cassandra-protocol", version = "3.1.0" }
cdrs-tokio-helpers-derive = { path = "../cdrs-tokio-helpers-derive", version = "5.0.2", optional = true }
derive_more.workspace = true
derivative.workspace = true
futures = { version = "0.3.21", default_features = false, features = ["alloc"] }
fxhash = "0.2.1"
itertools.workspace = true
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.81"
thiserror.workspace = true
tokio = { version = "1.19.2", features = ["net", "io-util", "rt", "sync", "macros", "rt-multi-thread", "time"] }
tokio-rustls = { version = "0.24", optional = true }
tracing = "0.1.35"
uuid.workspace = true
webpki = { version = "0.22.0", optional = true }

[dependencies.async-http-proxy]
version = "1.2.5"
optional = true
features = ["runtime-tokio", "basic-auth"]

[dev-dependencies]
float_eq = "1.0.0"
maplit = "1.0.0"
mockall = "0.11.1"
lazy_static = "1.4.0"
regex = "1.5.6"
uuid = { version = "1.0.0", features = ["v4"] }
time = { version = "0.3.9", features = ["std", "macros"] }

[[example]]
name = "crud_operations"
required-features = ["derive"]

[[example]]
name = "generic_connection"
required-features = ["derive"]

[[example]]
name = "insert_collection"
required-features = ["derive"]

[[example]]
name = "multiple_thread"
required-features = ["derive"]

[[example]]
name = "paged_query"
required-features = ["derive"]

[[example]]
name = "prepare_batch_execute"
required-features = ["derive"]
