[package]
name = "cdrs-tokio"
version = "8.1.9"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>", "Kamil Rojewski <kamil.rojewski@gmail.com>"]
edition = "2018"
description = "Async Cassandra DB driver written in Rust"
documentation = "https://docs.rs/cdrs-tokio"
homepage = "https://github.com/krojew/cdrs-tokio"
repository = "https://github.com/krojew/cdrs-tokio"
readme = "../README.md"
keywords = ["cassandra", "driver", "client", "cassandradb", "async"]
license = "MIT/Apache-2.0"
categories = ["asynchronous", "database"]
rust-version = "1.74"

[features]
rust-tls = ["tokio-rustls", "webpki"]
e2e-tests = []
derive = ["cdrs-tokio-helpers-derive"]
http-proxy = ["async-http-proxy"]

[dependencies]
arc-swap.workspace = true
atomic = "0.6.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
cassandra-protocol = { path = "../cassandra-protocol", version = "3.3.0" }
cdrs-tokio-helpers-derive = { path = "../cdrs-tokio-helpers-derive", version = "5.0.3", optional = true }
derive_more.workspace = true
derivative.workspace = true
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }
fxhash = "0.2.1"
itertools.workspace = true
rand = "0.9.0"
serde_json = "1.0.140"
thiserror.workspace = true
tokio = { version = "1.44.2", features = ["net", "io-util", "rt", "sync", "macros", "rt-multi-thread", "time"] }
# note: default features for tokio-rustls include aws_lc_rs, which require clang on Windows => disable and let users
# enable it explicitly
tokio-rustls = { version = "0.26.0", optional = true, default-features = false, features = ["logging", "tls12"] }
tracing = "0.1.41"
uuid.workspace = true
webpki = { version = "0.22.2", optional = true }

[dependencies.async-http-proxy]
version = "1.2.5"
optional = true
features = ["runtime-tokio", "basic-auth"]

[dev-dependencies]
float_eq = "1.0.1"
maplit = "1.0.2"
mockall = "0.14.0"
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }
time = { version = "0.3.41", features = ["std", "macros"] }

[[example]]
name = "crud_operations"
required-features = ["derive"]

[[example]]
name = "generic_connection"
required-features = ["derive"]

[[example]]
name = "insert_collection"
required-features = ["derive"]

[[example]]
name = "multiple_thread"
required-features = ["derive"]

[[example]]
name = "paged_query"
required-features = ["derive"]

[[example]]
name = "prepare_batch_execute"
required-features = ["derive"]
